# MeshOrient

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: MeshOrientDependencies.cmake  MeshOrientDownloadExternal.cmake
include/: MeshOrient.h
src/: MeshOrient.cpp  MeshOrientExe.cpp  triMesh.h
